--- a/treasure_island/package.json
+++ b/treasure_island/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
+    "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.167.2",
+    "playroomkit": "^0.0.81",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "three": "^0.167.1",
-    "three-stdlib": "^2.32.2"
+    "three-stdlib": "^2.32.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
